fix: ajuste en la liquidacion de HCH
