# controllers/preliquidacionct.go
@@ -2,6 +2,7 @@ package controllers
 
 import (
 	"fmt"
+	"math"
 	"strconv"
 
 	"github.com/astaxie/beego"
@@ -15,7 +16,7 @@ type PreliquidacionctController struct {
 	beego.Controller
 }
 
-func liquidarCPS(contrato models.Contrato) {
+func liquidarCPS(contrato models.Contrato, diasRestantes int) {
 
 	var mesIterativo int              //mes para iterar en el ciclo para liquidar todos los meses de una vez
 	var predicados []models.Predicado //variable para inyectar reglas
@@ -29,6 +30,8 @@ func liquidarCPS(contrato models.Contrato) {
 	var auxDetalle []models.DetallePreliquidacion
 	var reglasAlivios string
 	var reglasNuevas string //reglas a usar en cada iteracion
+	var diasContrato int
+	var mesesContrato int
 	cedula, err := strconv.ParseInt(contrato.Documento, 0, 64)
 
 	if err == nil {
@@ -36,8 +39,14 @@ func liquidarCPS(contrato models.Contrato) {
 	}
 
 	mesIterativo = int(contrato.FechaInicio.Month())
+	if diasRestantes == 0 {
+		diasContrato, mesesContrato = calcularDiasContratoCPS(contrato.FechaInicio, contrato.FechaFin)
+		fmt.Println("Dias Contrato: ", diasContrato)
+	} else {
+		diasContrato = diasRestantes
+		mesesContrato = int(math.Ceil(float64(diasContrato) / 30))
 
-	diasContrato, mesesContrato := calcularDiasContratoCPS(contrato.FechaInicio, contrato.FechaFin)
+	}
 
 	predicados = append(predicados, models.Predicado{Nombre: "valor_contrato(" + contrato.Documento + "," + fmt.Sprintf("%f", contrato.ValorContrato) + "). "})
 	predicados = append(predicados, models.Predicado{Nombre: "duracion_contrato(" + contrato.Documento + "," + strconv.Itoa(diasContrato) + "," + strconv.Itoa(contrato.Vigencia) + "). "})
@@ -71,7 +80,7 @@ func liquidarCPS(contrato models.Contrato) {
 
 			if err := request.GetJson(beego.AppConfig.String("UrlTitanCrud")+"/novedad?limit=-1&query=ContratoId.Id:"+strconv.Itoa(contrato.Id), &aux); err == nil {
 				LimpiezaRespuestaRefactor(aux, &auxNovedades)
-				if auxNovedades[0].Id != 0 {
+				if len(auxNovedades) != 0 {
 					for i := 0; i < len(auxNovedades); i++ {
 						if auxNovedades[i].FechaInicio.Year() == auxNovedades[i].FechaFin.Year() {
 							if preliquidacion[0].Mes >= int(auxNovedades[i].FechaInicio.Month()) && preliquidacion[0].Mes <= int(auxNovedades[i].FechaFin.Month()) && preliquidacion[0].Ano == auxNovedades[i].FechaFin.Year() {
