# controllers/utilidades.go
@@ -334,7 +334,6 @@ func CalcularDias(FechaInicio time.Time, FechaFin time.Time) (diasLaborados floa
 		a, m, d = diff(FechaInicio, FechaFin2)
 		mesesContrato = (float64(a * 12)) + float64(m) + (float64(d) / 30)
 		diasContrato = mesesContrato * 30
-
 	} else {
 		a, m, d = diff(FechaInicio, FechaFin)
 		mesesContrato = (float64(a * 12)) + float64(m) + (float64(d) / 30)
@@ -347,31 +346,34 @@ func CalcularDias(FechaInicio time.Time, FechaFin time.Time) (diasLaborados floa
 func calcularDiasContratoCPS(FechaInicio time.Time, FechaFin time.Time) (diasLaborados int, meses int) {
 	if FechaInicio.Year() == FechaFin.Year() {
 		meses = int(FechaFin.Month()) - int(FechaInicio.Month())
-		diasLaborados = meses * 30
+		if meses == 0 {
+			meses = 1
+			diasLaborados = FechaFin.Day() - FechaInicio.Day() + 1
+		} else {
+			diasLaborados = meses * 30
+		}
 	} else {
 		meses = int(FechaFin.Month()) - int(FechaInicio.Month()) + 12
 		diasLaborados = meses * 30
 	}
+
 	return diasLaborados, meses
 }
 
-func calcularDiasContratoHCH(FechaInicio time.Time, FechaFin time.Time) (diasLaborados float64) {
+func calcularSemanasContratoHCH(FechaInicio time.Time, FechaFin time.Time) (semanas float64) {
 	var a, m, d int
 	var mesesContrato float64
-	var diasContrato float64
 	if FechaFin.IsZero() {
 		var FechaFin2 time.Time
 		FechaFin2 = time.Now()
 		a, m, d = diff(FechaInicio, FechaFin2)
 		mesesContrato = (float64(a * 12)) + float64(m) + (float64(d) / 30)
-		diasContrato = mesesContrato * 30
 
 	} else {
 		a, m, d = diff(FechaInicio, FechaFin)
 		mesesContrato = (float64(a * 12)) + float64(m) + (float64(d) / 30)
-		diasContrato = mesesContrato * 30
 	}
-	return diasContrato
+	return (mesesContrato * 4) + 1
 }
 
 func registrarPreliquidacion(año, mes, estadoPreliquidacion, nomina int) (preliquidacion models.Preliquidacion) {
@@ -434,32 +436,55 @@ func registrarDetallePreliquidacion(detallePreliquidacion models.DetallePreliqui
 	}
 }
 
+func registratContrato(contrato models.Contrato) (respuesta models.Contrato) {
+	var response map[string]interface{}
+	if err := request.SendJson(beego.AppConfig.String("UrlTitanCrud")+"/contrato", "POST", &response, contrato); err == nil {
+		fmt.Println("Contrato guardado con éxito")
+		LimpiezaRespuestaRefactor(response, &respuesta)
+	} else {
+		fmt.Println("Error al guardar contrato", err)
+	}
+	return respuesta
+}
+
 func CalcularPeriodoLiquidacion(anoPreliquidacion, mesPreliquidacion int, fechaInicio, fechaFin time.Time) (periodoLiquidacion, periodoEspecifico string) {
 
 	var FechaControl time.Time
 	var periodo_liquidacion float64
-
-	_, _, d := diff(fechaInicio, fechaFin)
-
-	if int(fechaInicio.Month()) == mesPreliquidacion && int(fechaInicio.Year()) == anoPreliquidacion {
+	if fechaInicio.Month() == fechaFin.Month() && fechaInicio.Year() == fechaFin.Year() {
+		periodo_liquidacion, _ = CalcularDias(fechaInicio, fechaFin)
+		periodo_liquidacion = periodo_liquidacion + 1
+		periodoEspecifico = "Del " + strconv.Itoa(fechaInicio.Day()) + " al " + strconv.Itoa(fechaFin.Day()) + " del mes " + strconv.Itoa(mesPreliquidacion)
+	} else if int(fechaInicio.Month()) == mesPreliquidacion && int(fechaInicio.Year()) == anoPreliquidacion {
 		FechaControl = time.Date(anoPreliquidacion, time.Month(mesPreliquidacion), 30, 0, 0, 0, 0, time.UTC)
 		periodo_liquidacion, _ = CalcularDias(fechaInicio, FechaControl)
-		periodo_liquidacion = periodo_liquidacion + 1
+		periodo_liquidacion = periodo_liquidacion + 1 //Dia inclusive
 		periodoEspecifico = "Del " + strconv.Itoa(fechaInicio.Day()) + " al " + strconv.Itoa(FechaControl.Day()) + " del mes " + strconv.Itoa(mesPreliquidacion)
 	} else if int(fechaFin.Month()) == mesPreliquidacion && int(fechaFin.Year()) == anoPreliquidacion {
 		FechaControl = time.Date(anoPreliquidacion, time.Month(mesPreliquidacion), 1, 0, 0, 0, 0, time.UTC)
 		periodo_liquidacion, _ = CalcularDias(FechaControl, fechaFin)
-		periodo_liquidacion = periodo_liquidacion + 1
+		periodo_liquidacion = periodo_liquidacion + 1 //Dia Inclusivo
 		periodoEspecifico = "Del " + strconv.Itoa(FechaControl.Day()) + " al " + strconv.Itoa(fechaFin.Day()) + " del mes " + strconv.Itoa(mesPreliquidacion)
 	} else {
 		periodo_liquidacion = 30
 		periodoEspecifico = "Del 1 al 30 del mes " + strconv.Itoa(mesPreliquidacion)
 	}
 
-	if fechaFin.Day() != fechaInicio.Day() {
-		d = d + 1
-	}
 	periodo := strconv.Itoa(int(periodo_liquidacion))
 
 	return periodo, periodoEspecifico
+}
+
+func CalcularSemanas(diasLiquidados float64) (semanas int) {
+	aux := diasLiquidados / 7
+
+	if aux <= 1 {
+		return 1
+	} else if aux <= 2 {
+		return 2
+	} else if aux <= 3 {
+		return 3
+	} else {
+		return 4
+	}
 }
