# models/sucesor.go
@@ -1,0 +1,10 @@
+package models
+
+import "time"
+
+type Sucesor struct {
+	NumeroContrato string
+	Documento      string
+	NombreCompleto string
+	FechaInicio    time.Time
+}
